Remove temp_path_retention_policy; Change asyncio_mode to 'strict'

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-asyncio_mode = auto
+asyncio_mode = strict # changed from auto
 testpaths = tests
 python_files = test_*.py
 markers =
@@ -9,5 +9,5 @@ markers =
 filterwarnings =
     ignore::DeprecationWarning
     ignore::ResourceWarning
-temp_path_retention_policy = failed
+# temp_path_retention_policy = failed
 asyncio_default_fixture_loop_scope = function
